--- a/src/components/ProductsComponent.css
+++ b/src/components/ProductsComponent.css
@@ -4,11 +4,12 @@
   align-items: flex-start;
   justify-content: center;
   margin: 0 auto;
-  padding: 0 1rem;
+ 
   position: relative;
   /* margin-top: -120px; */
-  width: 90%;
+  width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 .skeleton__style {
   width: 350px;
